--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,12 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(234, 234, 234, 0.2);
+    background-color: rgba(234, 234, 234, 0);
     z-index: -1;
     transition: transform 0.8s, background-color 0.7s;
     transform: translateX(0%) translateY(-100%); }
   .nav:after {
-    background: white;
+    background: rgba(255, 255, 255, 0);
     transition-delay: 0s; }
   .nav:before {
     transition-delay: .1s; }
@@ -54,6 +54,8 @@
     font-size: calc(2vw + 10px);
     font-weight: 200;
     cursor: pointer; }
+    .nav__content ul {
+      padding: 0; }
     .nav__content img {
       position: absolute;
       opacity: 0;
@@ -66,12 +68,11 @@
   .nav__list-item {
     position: relative;
     display: inline-block;
-    padding: 1%;
+    margin: 1%;
     transition-delay: 0.8s;
     opacity: 0;
     transform: translate(0%, 100%);
-    transition: opacity .2s ease, transform .3s ease;
-    margin: auto; }
+    transition: opacity .2s ease, transform .3s ease; }
     .nav__list-item a {
       color: #1e2023;
       text-decoration: none; }
@@ -165,6 +166,31 @@
   text-align: justify; }
   #container-question-card h4 {
     color: #156a3b; }
+
+@keyframes changewidth {
+  from {
+    transform: scaleX(0); }
+  to {
+    transform: scaleX(1); } }
+h2 {
+  text-align: center;
+  margin: 5%;
+  padding: 30px;
+  position: relative;
+  width: auto; }
+  h2:after {
+    content: "";
+    position: absolute;
+    width: 20%;
+    height: 1px;
+    bottom: 0;
+    left: 40%;
+    background-color: #156a3b;
+    visibility: visible;
+    animation-duration: 1s;
+    animation-name: changewidth;
+    animation-iteration-count: infinite;
+    animation-direction: alternate; }
 
 body {
   margin: auto; }
