--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
-$h4_color : rgb(21,106,59);	
+$h4_color: rgb(21, 106, 59);
 @import "menu";
 @import "team";
 @import "faq";
-body{
-    margin: auto;
+@import "h2";
+body {
+  margin: auto;
 }
