--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,16 @@ header {
   position: relative;
   width: 100%;
   height: 100%;
-  margin: 0; }
+  margin: 0;
+  /*.Backgreen:hover {
+      filter: opacity(80%); 
+  }*/ }
   header .BackGreen {
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    filter: opacity(1); }
-  header .Backgreen:hover {
-    filter: opacity(80%); }
+    filter: opacity(70%); }
   header .Agence {
     color: #FEFEE2;
     position: absolute;
@@ -32,9 +33,9 @@ header {
   flex-direction: column; }
   #intro h1 {
     margin: auto;
-    padding-top: 5%;
+    padding-top: 2%;
     width: 70%;
-    font-size: 4vw;
+    font-size: 6vw;
     transform: scale(1);
     transition: transform 1s;
     text-align: center;
@@ -43,11 +44,12 @@ header {
     transform: scale(1.1);
     transition-duration: 1s; }
   #intro p, #intro .pr├®sentation {
+    margin: 2%;
     overflow: hidden;
     padding: 2% 0;
     margin: auto;
     width: 70%;
-    font-size: 3vw;
+    font-size: 1.5vw;
     text-align: center;
     transform: scale(1);
     transition: transform 1s; }
@@ -69,15 +71,18 @@ header {
     width: 100%; }
     #skills .container-services .service {
       text-align: center;
-      width: 25%; }
+      width: 25%;
+      font-size: 1.5vw; }
       #skills .container-services .service i {
-        background-color: #FEFEE2;
-        position: relative;
         font-size: 7vw;
-        color: green;
-        padding: 10%;
-        border: 1px solid grey;
-        border-radius: 50%;
+        color: #C8FF33;
+      /*background-color: #FEFEE2;
+      position: relative;
+    
+      color: green;
+      padding: 10%;
+      border: 1px solid grey;
+      border-radius: 50%;*/
         /*&:after{
                position: absolute;
                content: " ";
