--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,11 +8,11 @@ header {
         top: 0;
         width: 100%;
         height: 100%;
-        filter: opacity(1);
+        filter: opacity(70%);
     }
-    .Backgreen:hover {
+    /*.Backgreen:hover {
         filter: opacity(80%); 
-    }
+    }*/
     .Agence {
         color: #FEFEE2;
         position: absolute;
@@ -38,9 +38,9 @@ header {
         flex-direction: column;
         h1 {
           margin: auto;
-          padding-top: 5%;
+          padding-top: 2%;
           width: 70%;
-          font-size: 4vw;
+          font-size: 6vw;
           transform: scale(1);
           transition: transform 1s;
           text-align: center;
@@ -52,11 +52,12 @@ header {
 
         }
         p, .présentation {
+            margin: 2%;
             overflow: hidden;
             padding: 2% 0;
             margin: auto;
             width: 70%;
-            font-size: 3vw;
+            font-size: 1.5vw;
             text-align: center;
             transform: scale(1);
             transition: transform 1s;
@@ -84,14 +85,17 @@ header {
           .service {
               text-align: center;
               width: 25%;
+              font-size: 1.5vw;
               i {
-                  background-color: #FEFEE2;
+                font-size: 7vw;
+                color: #C8FF33;
+                  /*background-color: #FEFEE2;
                   position: relative;
-                  font-size: 7vw;
+                
                   color: green;
                   padding: 10%;
                   border: 1px solid grey;
-                  border-radius: 50%;
+                  border-radius: 50%;*/
                /*&:after{
                       position: absolute;
                       content: " ";
@@ -103,10 +107,10 @@ header {
                       border-radius: 50%;
                       border: 8px solid green;
                   }*/
-              }
-            p {
+                }
+             p {
                 margin: auto;
-            } 
+             } 
 
         }
        }
